<resources>
    <string name="app_name">CARVIS</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="firstName">First Name</string>
    <string name="surname">Surname</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="signIn">Sign In</string>
    <string name="trackSpeed">Track Speed</string>
    <string name="initialSpeed">0.0 km/h</string>
    <string name="speedMetric">km/h</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
